# model-council

./: .gitignore  LICENSE  README.md  pyproject.toml
backend/: config.py  council.py  main.py  prompts.py  runtime.py  settings.py  storage.py
backend/adapters/: __init__.py  base.py  claude_adapter.py  codex_adapter.py  gemini_adapter.py
frontend/: index.html  package-lock.json  package.json  tsconfig.json
frontend/src/: App.tsx  api.ts  styles.css
frontend/src/components/: ModelCard.tsx  StageBar.tsx
macos/Sources/ModelCouncilApp/: main.swift
output/app-icon/: model-council-art-icon.icns
scripts/: build_macos_app.py  render_macos26_icon.swift  test_backend.py
tests/: test_runtime_paths.py
