[project]
name = "model-council"
version = "0.1.0"
description = "Three-stage LLM debate orchestrator powered by Claude Code, Gemini CLI, and Codex CLI."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.8",
    "sse-starlette>=2.1",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["backend", "backend.adapters"]
